--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="/resourses/javascript/loader/GLTFLoader.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="/resourses/javascript/controller/PointerLockControls.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="resourses/javascript/loader/GLTFLoader.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="resourses/javascript/controller/PointerLockControls.js"></script>
   <!-- webgl extension end -->
   <!-- my start -->
-  <script type="text/javascript" charset="UTF-8" src="/resourses/javascript/tools/tools.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="/resourses/javascript/class/object.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="/resourses/javascript/class/texture.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="/resourses/javascript/class/character/Creeper.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="resourses/javascript/tools/tools.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="resourses/javascript/class/object.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="resourses/javascript/class/texture.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="resourses/javascript/class/character/Creeper.js"></script>
   <!-- my end -->
   <title>Gamedev Canvas Workshop</title>
   <style>
@@ -118,15 +118,15 @@
   </script>
 </body>
 <!-- other start -->
-<script type="text/javascript" charset="UTF-8" src="/resourses/lib/OBJLoader.js"></script>
-<script type="text/javascript" charset="UTF-8" src="/resourses/javascript/template/gl-matrix/gl-matrix.js"></script>
-<script type="text/javascript" charset="UTF-8" src="/resourses/javascript/utils/webgl-utils.js"></script>
-<script type="text/javascript" charset="UTF-8" src="/resourses/javascript/template/gl-matrix/m4.js"></script>
+<script type="text/javascript" charset="UTF-8" src="resourses/lib/OBJLoader.js"></script>
+<script type="text/javascript" charset="UTF-8" src="resourses/javascript/template/gl-matrix/gl-matrix.js"></script>
+<script type="text/javascript" charset="UTF-8" src="resourses/javascript/utils/webgl-utils.js"></script>
+<script type="text/javascript" charset="UTF-8" src="resourses/javascript/template/gl-matrix/m4.js"></script>
 <!-- other end -->
 <!-- my start -->
-<!-- <script type="text/javascript" charset="UTF-8" src="/resourses/javascript/init/init.js"></script> -->
-<!-- <script type="text/javascript" charset="UTF-8" src="/resourses/javascript/render/main.js"></script> -->
-<script type="text/javascript" charset="UTF-8" src="/resourses/javascript/render/render_.js"></script>
-<link rel="stylesheet" href="/index.css" />
+<!-- <script type="text/javascript" charset="UTF-8" src="resourses/javascript/init/init.js"></script> -->
+<!-- <script type="text/javascript" charset="UTF-8" src="resourses/javascript/render/main.js"></script> -->
+<script type="text/javascript" charset="UTF-8" src="resourses/javascript/render/render_.js"></script>
+<link rel="stylesheet" href="index.css" />
 <!-- my end -->
 </html>
